# AI-Playground

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  database.py  utils.py
backend/app/routers/: __init__.py  chat.py  idiom.py  wordchain.py
backend/app/services/: chat_service.py  idiom_service.py  wordchain_service.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.js.backup
