[project]
name = "chat-backend"
version = "1.0.0"
description = "Simple chat server with FastAPI and WebSocket"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
]

[tool.uv]
dev-dependencies = []
